--- a/blog-tech/_posts/2020-06-28-uml-demo.markdown
+++ b/blog-tech/_posts/2020-06-28-uml-demo.markdown
@@ -9,5 +9,5 @@ category: tech
 
 #### UML Demo
 * This demo shows a clase graph designed by using UML softwere UMLet and some important conponents of it.
-* Image followed by this line. ![uml-cls](../../assets/images/uml_cls.svg) 
+* Image followed by this line. ![uml-cls](assets/images/uml_cls.svg) 
 * See <script src="https://gist.github.com/santiagochou/e6135dfbe008444d54506558fc55a336.js"></script>
