--- a/blog-yijing/_posts/2020-12-24-17-sui.md
+++ b/blog-yijing/_posts/2020-12-24-17-sui.md
@@ -1,8 +1,6 @@
-《高島斷易》17-隨
+# 《高島斷易》17-隨
 
-[![=17澤雷隨](http://upload-images.jianshu.io/upload_images/6831688-9208322aa6378ebf..jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)](http://blog.xuite.net/dejavu8899/blog/36001223) 
-
-![澤雷隨](/assets/images/yijing/zeleisui.jpg) 
+![澤雷隨](/assets/images/yijing/zeleisui.jpg) {:height="50%" width="50%"}
 
 ［隨］澤上雷下，［震］奮下、［兌］虛上，其中疏流，則內動不自主，而川從外；
 從外，故曰「隨」，遂以［隨］名卦。
