--- a/blog-yijing/_posts/2020-12-24-17-sui.md
+++ b/blog-yijing/_posts/2020-12-24-17-sui.md
@@ -1,6 +1,7 @@
 # 《高島斷易》17-隨
 
 ![澤雷隨](/assets/images/yijing/zeleisui.jpg =250x) 
+<img src="/assets/images/yijing/zeleisui.jpg" width="200">
 
 ［隨］澤上雷下，［震］奮下、［兌］虛上，其中疏流，則內動不自主，而川從外；
 從外，故曰「隨」，遂以［隨］名卦。
